feat: about and contact form

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -149,7 +149,7 @@
           <p>Software Engineer</p>
         </div>
       </div>
-      <div class="col-md-3">
+      <!-- <div class="col-md-3">
         <div class="team-inner text-center">
           <img src="assets/images/team1.svg" class="img-fluid" alt="" />
           <h3>Jenna Doe</h3>
@@ -176,23 +176,25 @@
           <h3>Jenna Doe</h3>
           <p>Software Engineer</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
 <section class="lts">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="lts-inner">
-          <h2>
-            Take your career to next level, <br />
-            join our team
-          </h2>
-          <a [routerLink]="['/careers']" class="btn-white-border"
-            >See openings
-            <img src="../../../assets/images/arrow.svg" alt="icon"
-          /></a>
+  <div class="lts-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="lts-inner">
+            <h2>
+              Take your career to next level, <br />
+              join our team
+            </h2>
+            <a [routerLink]="['/careers']" class="btn-white-border"
+              >See openings
+              <img src="../../../assets/images/arrow.svg" alt="icon"
+            /></a>
+          </div>
         </div>
       </div>
     </div>
