--- a/src/styles.scss
+++ b/src/styles.scss
@@ -256,7 +256,7 @@ span.swiper-pagination-bullet {
   background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%) !important;
 }
 .lts {
-  padding: 60px 60px 107px 60px;
+  // padding: 60px 60px 107px 60px;
   background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
 
   text-align: center;
@@ -308,7 +308,7 @@ span.swiper-pagination-bullet {
     background-repeat: no-repeat;
     background-position: 3% 12%, 14% 93%, 90% 20%, 102% 83%;
     background-size: 4%, 1%, 1%, 8%;
-    padding: 130px 0;
+    padding: 100px 0;
   }
 }
 
