--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -25,25 +25,25 @@
 
 // ********************button****************
 
-.btn.btn-main {
-  border-radius: 5px;
-  background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
-  padding: 16px 46px;
-  color: #fff;
-  transition: 0.4s ease all;
-  margin: 0px 0 0 0;
-  font-size: 20px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 24px;
-  &:hover {
-    transform: translateY(5px) scale(0.9);
-  }
-}
+// .btn.btn-main {
+//   border-radius: 5px;
+//   background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
+//   padding: 16px 46px;
+//   color: #fff;
+//   transition: 0.4s ease all;
+//   margin: 0px 0 0 0;
+//   font-size: 20px;
+//   font-weight: bold;
+//   letter-spacing: 0;
+//   line-height: 24px;
+//   &:hover {
+//     transform: translateY(5px) scale(0.9);
+//   }
+// }
 .mat-error {
   font-size: 15px;
   color: red;
-  margin: 9px 0 0 0;
+  margin: 13px 0 0 0;
   display: inline-block;
 }
 
@@ -99,7 +99,7 @@
   .form-control {
     padding: 10px 15px !important;
     min-height: 50px;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     width: 66%;
     border: 2px solid #262332;
     border-radius: 5px;
@@ -107,10 +107,14 @@
   .form-check-label,
   .terms-condition {
     color: #262332;
-    font-size: 12px;
-    font-weight: 300;
+    font-size: 13px;
+    font-weight: 400;
     line-height: 15px;
     letter-spacing: 0.18461539px;
+    a {
+      text-decoration: underline;
+      color: #262332;
+    }
   }
 }
 .terms-condition {
