feat: new pages

--- a/src/app/pages/careers/careers.component.html
+++ b/src/app/pages/careers/careers.component.html
@@ -27,15 +27,11 @@
 
 <section class="Currentopenings">
   <div class="container">
-    <div class="row">
-      <div class="col-md-12">
+    <div class="row justify-content-center">
+      <div class="col-md-12 col-lg-10">
         <div class="title mt-5 mb-3">
           <h2>Current openings</h2>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
         <div class="Currentopenings-inner">
           <ul>
             <li *ngFor="let item of careers">
@@ -51,7 +47,11 @@
             </li>
           </ul>
         </div>
-        <!-- <nav aria-label="Page navigation example">
+      </div>
+    </div>
+    <!-- <div class="row">
+      <div class="col-md-12"> -->
+    <!-- <nav aria-label="Page navigation example">
           <ul class="pagination justify-content-end">
             <li class="page-item"><a class="page-link" href="#">Pre</a></li>
             <li class="page-item">
@@ -62,7 +62,7 @@
             <li class="page-item"><a class="page-link" href="#">Next</a></li>
           </ul>
         </nav> -->
-      </div>
-    </div>
+    <!-- </div>
+    </div> -->
   </div>
 </section>
