--- a/src/app/pages/job-listing/job-listing.component.html
+++ b/src/app/pages/job-listing/job-listing.component.html
@@ -30,8 +30,8 @@
 
   <section class="job-details">
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
           <div class="job-details-inner">
             <h4>Roles & responsibilities</h4>
             <ul>
