--- a/src/app/shared/components/recent-projects/recent-projects.component.html
+++ b/src/app/shared/components/recent-projects/recent-projects.component.html
@@ -45,8 +45,8 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="swiper-slide-inner">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-6 slider-main-image">
                       <img
                         src="../../assets/images/main-project1.png"
                         class="img-fluid W-100"
@@ -82,8 +82,8 @@
               </div>
               <div class="swiper-slide">
                 <div class="swiper-slide-inner">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-6 slider-main-image">
                       <img
                         src="../../assets/images/main-project1.png"
                         class="img-fluid W-100"
@@ -119,8 +119,8 @@
               </div>
               <div class="swiper-slide">
                 <div class="swiper-slide-inner">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-6 slider-main-image">
                       <img
                         src="../../assets/images/main-project1.png"
                         class="img-fluid W-100"
@@ -156,8 +156,8 @@
               </div>
               <div class="swiper-slide">
                 <div class="swiper-slide-inner">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-6 slider-main-image">
                       <img
                         src="../../assets/images/main-project1.png"
                         class="img-fluid W-100"
