--- a/src/app/pages/services/mobile-app/mobile-app.component.scss
+++ b/src/app/pages/services/mobile-app/mobile-app.component.scss
@@ -23,29 +23,29 @@
 }
 
 // ********************button****************
-a.btn.btn-main {
-  background-image: linear-gradient(to right, #009eff, #30ccc6, #009eff);
-  background-size: 300% 100%;
-  border-radius: 5px;
-  padding: 16px 46px;
-  display: inline-block;
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 24px;
-  moz-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  &:hover {
-    background-position: 100% 0;
-    moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -webkit-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-  }
-}
+// a.btn.btn-main {
+//   background-image: linear-gradient(to right, #009eff, #30ccc6, #009eff);
+//   background-size: 300% 100%;
+//   border-radius: 5px;
+//   padding: 16px 46px;
+//   display: inline-block;
+//   color: #fff;
+//   font-size: 20px;
+//   font-weight: bold;
+//   letter-spacing: 0;
+//   line-height: 24px;
+//   moz-transition: all 0.4s ease-in-out;
+//   -o-transition: all 0.4s ease-in-out;
+//   -webkit-transition: all 0.4s ease-in-out;
+//   transition: all 0.4s ease-in-out;
+//   &:hover {
+//     background-position: 100% 0;
+//     moz-transition: all 0.4s ease-in-out;
+//     -o-transition: all 0.4s ease-in-out;
+//     -webkit-transition: all 0.4s ease-in-out;
+//     transition: all 0.4s ease-in-out;
+//   }
+// }
 
 // *******************work with us*********************
 .website-feature {
@@ -120,11 +120,11 @@ a.btn.btn-main {
       li {
         background: #fff;
         border-radius: 2px;
-        width: 48%;
+        width: 31%;
         float: left;
         box-sizing: border-box;
         padding: 60px;
-        margin: 0px 20px 48px 0;
+        margin: 0px 48px 48px 0;
         h4 {
           color: #262332;
           font-family: Montserrat;
@@ -141,8 +141,9 @@ a.btn.btn-main {
           line-height: 30px;
         }
       }
-      li:nth-child(even) {
-        margin: 0px 0px 48px 20px;
+      li:nth-child(3),
+      li:nth-child(6) {
+        margin: 0px 0px 48px 0px;
       }
     }
   }
