refactor services pages

--- a/src/app/pages/services/graphic/graphic.component.html
+++ b/src/app/pages/services/graphic/graphic.component.html
@@ -284,4 +284,27 @@
 <app-recent-projects></app-recent-projects>
 
 <!-- ********************Appointment************ -->
-<app-online-appointment [data]="data"></app-online-appointment>
+<!-- ********************Appointment************ -->
+<section class="lts">
+  <div class="lts-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="lts-inner">
+            <h2>
+              Are you happy with what we offer? Grab your wrapkit copy now
+            </h2>
+            <p>
+              You can relay on our amazing features list and also our customer
+              services will be great experience for you without doubt and in
+              no-time
+            </p>
+            <a routerLink="/contact" class="btn-white-border">
+              Ask for quotation <img src="../../../../assets/images/arrow.svg"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
