--- a/src/app/pages/services/seo/seo.component.html
+++ b/src/app/pages/services/seo/seo.component.html
@@ -282,4 +282,23 @@
 <app-recent-projects></app-recent-projects>
 
 <!-- ********************Appointment************ -->
-<app-online-appointment [data]="data"></app-online-appointment>
+<section class="lts">
+  <div class="lts-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="lts-inner">
+            <h2>Happy with what we offer? Grab it Now!</h2>
+            <p>
+              Yeah ! Its pretty cool about what you are offering and i starterd
+              to feel in love with your Amazing UI Kit
+            </p>
+            <a routerLink="/contact" class="btn-white-border">
+              Ask a quotation <img src="../../../../assets/images/arrow.svg"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
