--- a/src/app/pages/services/website/website.component.html
+++ b/src/app/pages/services/website/website.component.html
@@ -233,4 +233,20 @@
 <app-recent-projects></app-recent-projects>
 
 <!-- ********************Appointment************ -->
-<app-online-appointment [data]="data"></app-online-appointment>
+<section class="lts">
+  <div class="lts-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="lts-inner">
+            <h2>Are you looking for Online Appointment?</h2>
+
+            <a routerLink="/contact" class="btn-white-border">
+              Contact us now <img src="../../../../assets/images/arrow.svg"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
