--- a/src/app/pages/services/mobile-app/mobile-app.component.html
+++ b/src/app/pages/services/mobile-app/mobile-app.component.html
@@ -217,4 +217,23 @@
 <app-recent-projects></app-recent-projects>
 
 <!-- ********************Appointment************ -->
-<app-online-appointment [data]="data"></app-online-appointment>
+<section class="lts">
+  <div class="lts-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="lts-inner">
+            <h2>Like what you see?</h2>
+            <p>
+              Why not drop us a message and we will get back to you with your
+              personalized quotation?
+            </p>
+            <a routerLink="/contact" class="btn-white-border">
+              Get a quote <img src="../../../../assets/images/arrow.svg"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
