--- a/src/app/pages/services/seo/seo.component.scss
+++ b/src/app/pages/services/seo/seo.component.scss
@@ -23,33 +23,33 @@
 }
 
 // ********************button****************
-a.btn.btn-main {
-  background-image: linear-gradient(to right, #009eff, #30ccc6, #009eff);
-  background-size: 300% 100%;
-  border-radius: 5px;
-  padding: 16px 46px;
-  display: inline-block;
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 24px;
-  moz-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  &:hover {
-    background-position: 100% 0;
-    moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -webkit-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-  }
-}
+// a.btn.btn-main {
+//   background-image: linear-gradient(to right, #009eff, #30ccc6, #009eff);
+//   background-size: 300% 100%;
+//   border-radius: 5px;
+//   padding: 16px 46px;
+//   display: inline-block;
+//   color: #fff;
+//   font-size: 20px;
+//   font-weight: bold;
+//   letter-spacing: 0;
+//   line-height: 24px;
+//   moz-transition: all 0.4s ease-in-out;
+//   -o-transition: all 0.4s ease-in-out;
+//   -webkit-transition: all 0.4s ease-in-out;
+//   transition: all 0.4s ease-in-out;
+//   &:hover {
+//     background-position: 100% 0;
+//     moz-transition: all 0.4s ease-in-out;
+//     -o-transition: all 0.4s ease-in-out;
+//     -webkit-transition: all 0.4s ease-in-out;
+//     transition: all 0.4s ease-in-out;
+//   }
+// }
 
 // *******************work with us*********************
 .website-feature {
-  padding: 200px 0 200px 0;
+  padding: 200px 0 100px 0;
   background-image: url(/../../assets/images/about-icon-5.svg),
     url(/../../assets/images/about-icon-6.svg);
   background-repeat: no-repeat;
@@ -96,7 +96,7 @@ a.btn.btn-main {
     url(/../../assets/images/about-icon-6.svg),
     url(/../../assets/images/about-icon-8.svg);
   background-repeat: no-repeat;
-  background-position: 3% 44%, 95% 13%, 95% 94%;
+  background-position: 3% 44%, 95% 13%, 100% 94%;
   padding: 188px 0 165px 0;
   .benefits-title {
     h2 {
@@ -120,11 +120,12 @@ a.btn.btn-main {
       li {
         background: #fff;
         border-radius: 2px;
-        width: 48%;
+        width: 31%;
         float: left;
         box-sizing: border-box;
         padding: 60px;
-        margin: 0px 20px 48px 0;
+        margin: 0px 48px 48px 0;
+        height: 300px;
         h4 {
           color: #262332;
           font-family: Montserrat;
@@ -141,19 +142,29 @@ a.btn.btn-main {
           line-height: 30px;
         }
       }
-      li:nth-child(even) {
-        margin: 0px 0px 48px 20px;
+      li:nth-child(3),
+      li:nth-child(6) {
+        margin: 0px 0px 48px 0px;
       }
     }
   }
 }
 
 .lts {
-  padding: 180px 0;
+  // padding: 180px 0;
   h2 {
-    margin-bottom: 60px;
+    margin-bottom: 15px;
     text-align: center;
-    padding: 0 4%;
+    padding: 0 28%;
+  }
+  p {
+    color: #ffffff;
+    font-size: 20px;
+    letter-spacing: 0;
+    line-height: 30px;
+    text-align: center;
+    margin: 0px 0 68px;
+    padding: 0% 26%;
   }
 }
 .isBenefits {
@@ -163,6 +174,7 @@ a.btn.btn-main {
     font-weight: 800;
     letter-spacing: 1px;
     line-height: 60px;
+    margin-bottom: 40px;
   }
   p {
     opacity: 0.5;
