--- a/src/app/pages/services/website/website.component.scss
+++ b/src/app/pages/services/website/website.component.scss
@@ -49,7 +49,7 @@
 
 // *******************work with us*********************
 .website-feature {
-  padding: 200px 0 200px 0;
+  padding: 200px 0 100px 0;
   background-image: url(/../../assets/images/about-icon-5.svg),
     url(/../../assets/images/about-icon-6.svg);
   background-repeat: no-repeat;
@@ -96,7 +96,7 @@
     url(/../../assets/images/about-icon-6.svg),
     url(/../../assets/images/about-icon-8.svg);
   background-repeat: no-repeat;
-  background-position: 3% 53%, 95% 13%, 95% 94%;
+  background-position: 3% 53%, 95% 13%, 100% 94%;
   padding: 188px 0 165px 0;
   .benefits-title {
     h2 {
@@ -122,11 +122,11 @@
       li {
         background: #fff;
         border-radius: 2px;
-        width: 48%;
+        width: 31%;
         float: left;
         box-sizing: border-box;
         padding: 60px;
-        margin: 0px 20px 48px 0;
+        margin: 0px 48px 48px 0;
         h4 {
           color: #262332;
           font-family: Montserrat;
@@ -145,21 +145,41 @@
           line-height: 30px;
         }
       }
-      li:nth-child(even) {
-        margin: 0px 0px 48px 20px;
+      li:nth-child(3),
+      li:nth-child(6) {
+        margin: 0px 0px 48px 0px;
       }
     }
   }
 }
 
+// .lts {
+//   padding: 180px 0;
+//   h2 {
+//     margin-bottom: 60px;
+//     text-align: center;
+//     padding: 0 4%;
+//   }
+// }
+
 .lts {
-  padding: 180px 0;
+  // padding: 180px 0;
   h2 {
-    margin-bottom: 60px;
+    margin-bottom: 78px;
     text-align: center;
-    padding: 0 4%;
+    padding: 0 28%;
+  }
+  p {
+    color: #ffffff;
+    font-size: 20px;
+    letter-spacing: 0;
+    line-height: 30px;
+    text-align: center;
+    margin: 0px 0 60px;
+    padding: 0% 21%;
   }
 }
+
 // ******************media queries****************
 @media screen and (max-width: 1700px) {
   .sv-hero {
