--- a/src/app/pages/job-listing/job-listing.component.html
+++ b/src/app/pages/job-listing/job-listing.component.html
@@ -20,8 +20,8 @@
               {{ singleDetail?.name }}
             </h2>
             <a [routerLink]="['/application']" class="btn-white"
-              >Apply now <span>→</span></a
-            >
+              >Apply now <img src="assets/images/blue-arrow.svg"
+            /></a>
           </div>
         </div>
       </div>
