--- a/src/app/pages/job-listing/job-listing.component.scss
+++ b/src/app/pages/job-listing/job-listing.component.scss
@@ -35,10 +35,8 @@
   margin-bottom: 70px;
   padding: 18px 46px;
   display: inline-block;
-  span {
+  img {
     margin-left: 10px;
-    font-size: 23px;
-    color: #30ccc6;
   }
   &:hover {
     transform: scale(0.9);
