--- a/src/app/shared/components/recent-projects/recent-projects.component.scss
+++ b/src/app/shared/components/recent-projects/recent-projects.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   // background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
-  padding: 180px 0;
+  padding: 150px 0 100px 0;
   position: relative;
   z-index: 1;
   .slide-content {
