--- a/src/styles.scss
+++ b/src/styles.scss
@@ -308,7 +308,7 @@ span.swiper-pagination-bullet {
     background-repeat: no-repeat;
     background-position: 3% 12%, 14% 93%, 90% 20%, 102% 83%;
     background-size: 4%, 1%, 1%, 8%;
-    padding: 100px 0;
+    // padding: 50px 0;
   }
 }
 
