--- a/src/styles.scss
+++ b/src/styles.scss
@@ -353,15 +353,25 @@ a.btn.btn-main {
 }
 
 // ******************  Media Query *******************
+@media screen and(max-width:1800px) {
+  .container {
+    width: 97%;
+    margin: 0 auto;
+    max-width: 97%;
+  }
+}
 @media screen and (min-width: 1101px) and (max-width: 1440px) {
   .hero .hero-inner h1 {
     font-size: 55px !important;
   }
   img.img-fluid.of1 {
-    width: 230px !important;
+    width: 13% !important;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1100px) {
+  img.img-fluid.of1 {
+    width: 13% !important;
+  }
   h1 {
     font-size: 30px !important;
     line-height: 1.3 !important;
@@ -390,8 +400,16 @@ a.btn.btn-main {
   .work-with-us .work-with-inner #counter li {
     padding: 5px !important;
   }
+  a.btn.btn-main,
+  .slide-project a.btn.btn-border {
+    padding: 16px 28px;
+    font-size: 17px;
+  }
 }
 @media screen and (max-width: 767px) {
+  img.img-fluid.of1 {
+    display: none;
+  }
   section.hero {
     .row {
       flex-direction: column-reverse;
@@ -421,11 +439,7 @@ a.btn.btn-main {
       }
     }
   }
-  img.img-fluid.of1 {
-    z-index: -1;
-    opacity: 1;
-    max-width: 110px;
-  }
+
   .work-with-inner {
     top: 0 !important;
   }
@@ -459,6 +473,11 @@ a.btn.btn-main {
     transform: scale(0.4);
     top: 0 !important;
     right: 0 !important;
+  }
+  a.btn.btn-main,
+  .slide-project a.btn.btn-border {
+    padding: 16px 28px;
+    font-size: 15px;
   }
 }
 @media screen and (max-width: 1100px) {
