--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -144,7 +144,70 @@
 @media screen and (max-width: 1700px) {
   .sv-hero {
     h2 {
+      font-size: 50px;
       margin-right: 388px;
+    }
+  }
+}
+@media screen and (max-width: 1600px) {
+  .sv-hero {
+    h2 {
+      margin-right: 388px;
+    }
+  }
+  .website-feature {
+    padding: 100px 0 80px 0;
+  }
+  .find-out {
+    padding: 80px 0;
+  }
+  .fuom {
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .sv-hero {
+    padding: 60px 0 59px 0px;
+    background-position: 2% 80%, 89% 29%, 96% 57%, 83% 151%, center center;
+    background-size: 17px, 15px, 30px, 20%, 100%;
+
+    h2 {
+      font-size: 30px !important;
+      line-height: 40px !important;
+    }
+  }
+}
+@media screen and (max-width: 992px) {
+  .website-feature {
+    background-image: none;
+    a.btn.btn-main {
+      margin-bottom: 0;
+    }
+  }
+
+  .login-form {
+    .form-control {
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .sv-hero {
+    padding: 39px 0 0px 0px;
+
+    background-image: none;
+    background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
+    h2 {
+      margin-right: 0;
+    }
+  }
+  .website-feature {
+    padding: 80px 0 60px 0;
+    p {
+      margin-bottom: 20px;
+      max-width: 100%;
     }
   }
 }
