--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -32,3 +32,27 @@ footer {
     }
   }
 }
+
+// ****************media query***********************
+@media screen and (max-width: 767px) {
+  footer {
+    .logo {
+      text-align: center;
+      margin-bottom: 20px;
+      img {
+        width: 23px;
+      }
+      span {
+        margin-left: 12px;
+      }
+    }
+    ul {
+      flex-direction: column;
+      justify-content: center;
+      li {
+        width: 100%;
+        text-align: center;
+      }
+    }
+  }
+}
