--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header" [ngClass]="isHomePage ? 'whiteheader' : 'blueheader'">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-6">
+      <div class="col-sm-12 col-md-6">
         <div class="logo">
           <a routerLink="">
             <img
@@ -17,7 +17,7 @@
           </a>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-sm-12 col-md-6">
         <div class="d-flex justify-content-end align-items-center side-menu">
           <div class="main-menu" *ngIf="showmenu">
             <ul [ngClass]="isHomePage ? 'blackmenu' : 'whitemenu'">
